# lalrdoc

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  build.rs
src/: cli.rs  lib.rs  main.rs
src/grammar/: parse_tree.rs  repr.rs
src/parser/: lrgrammar.lalrpop  mod.rs
src/reference_builder/: mdbook.rs  mod.rs  ref_render.rs
src/tok/: mod.rs
